Clean up Docker setup: consolidate Java flags into java9args.txt and use @file syntax in docker-compose